@@ -142,10 +142,49 @@ void test_connection_string_parser_unescapes(pqxx::test::context &)
 }
 
 
+void test_connection_string_can_be_zview(pqxx::test::context &)
+{
+  pqxx::connection const cx_without_params{pqxx::zview{}};
+  PQXX_CHECK(cx_without_params.is_open());
+
+  pqxx::connection const cx_with_params{
+    pqxx::zview{}, std::array<std::pair<pqxx::zview, std::string>, 1u>{
+                     {{"connect_timeout", "5"}}}};
+  PQXX_CHECK(cx_with_params.is_open());
+}
+
+
+void test_connection_string_can_be_c_string(pqxx::test::context &)
+{
+  pqxx::connection const cx_without_params{""};
+  PQXX_CHECK(cx_without_params.is_open());
+
+  pqxx::connection const cx_with_params{
+    "", std::array<std::pair<pqxx::zview, std::string>, 1u>{
+          {{"connect_timeout", "5"}}}};
+  PQXX_CHECK(cx_with_params.is_open());
+}
+
+
+void test_connection_string_can_be_string(pqxx::test::context &)
+{
+  pqxx::connection const cx_without_params{std::string{}};
+  PQXX_CHECK(cx_without_params.is_open());
+
+  pqxx::connection const cx_with_params{
+    std::string{}, std::array<std::pair<pqxx::zview, std::string>, 1u>{
+                     {{"connect_timeout", "5"}}}};
+  PQXX_CHECK(cx_with_params.is_open());
+}
+
+
 PQXX_REGISTER_TEST(test_connection_string_escapes);
 PQXX_REGISTER_TEST(test_connection_string_parser_accepts_empty_string);
 PQXX_REGISTER_TEST(test_connection_string_parser_accepts_connection_string);
 PQXX_REGISTER_TEST(test_connection_string_parser_deduplicates);
 PQXX_REGISTER_TEST(test_connection_string_parser_unquotes);
 PQXX_REGISTER_TEST(test_connection_string_parser_unescapes);
+PQXX_REGISTER_TEST(test_connection_string_can_be_zview);
+PQXX_REGISTER_TEST(test_connection_string_can_be_c_string);
+PQXX_REGISTER_TEST(test_connection_string_can_be_string);
 } // namespace
