@@ -2,7 +2,8 @@
  - Release candidate for 8.0.0.
  - Any changes will be logged under "8.0.0".
  - You can now combine connection string & option pairs on connections! (#1133)
- - `pqxx::zview` default constructor now also zero-terminates.
+ - `pqxx::zview` no longer accepts null pointer.
+ - `pqxx::zview` is now `final`.
  - Libpqxx exceptions now have a `std::stacktrace`, if available.
  - Replace generated config headers with just `config-compiler.h`. (#1152)
  - CMake build now filters `config-compiler.h`, like the autoconfig build does.
@@ -11,6 +12,7 @@
  - Deprecated `extract_version.sh`; use `extract_version.py`.
  - Rewrote header/binary version compatibility check.
  - For `stream()`, a type must be convertible and move-constructible. (#1168)
+ - Build defaults to C++20 minimum.
 8.0.0
  - C++20 is now the oldest C++ version that libpqxx supports.
  - Requires PostgreSQL 11 or better.
